Funcionalidade: Adição de funcionalidade de finalização de compra e processamento de pedidos - Implementação do endpoint de finalização de compra para gerenciar o carrinho de compras e a criação de pedidos. - Adição de modelos para Carrinho, Item do Carrinho, Pedido e Resposta de Erro. - Atualização da documentação Swagger para incluir os novos endpoints e modelos. - Criação de repositórios em memória para Cliente e Pedido. - Melhoria no tratamento de erros e na formatação de respostas para garantir a consistência da API. - Refatoração do manipulador de produtos para incluir descrições detalhadas e respostas de erro. - Remoção do arquivo products.db obsoleto. - Atualização das requisições HTTP para recuperação dinâmica de produtos nos testes e requisições de checkout.
