# internal/model/cart_item.go
@@ -1,6 +1,6 @@
 package model
 
 type CartItem struct {
-    ProductID int64 `json:"product_id"`
-    Quantity  int   `json:"quantity"`
+	ProductID int64 `json:"product_id" example:"1"`
+	Quantity  int   `json:"quantity" example:"2"`
 }
