# internal/model/error.go
@@ -1,0 +1,7 @@
+package model
+
+// ErrorResponse is a standard envelope for error responses
+type ErrorResponse struct {
+	// Message short human-readable error message
+	Message string `json:"message" example:"resource not found"`
+}
